@@ -1,2 +1,3 @@
 *.gem
 .*.swp
+extra
