@@ -1,0 +1,61 @@
+= poliqarpr
+
+* http://github.com/apohllo/poliqarpr
+
+== DESCRIPTION:
+
+Poliqarpr is Ruby client for Poliqarp server.
+
+
+== FEATURES/PROBLEMS:
+
+* asynchronous communication is implemented in synchronous manner 
+* only partial implementation of server protocol
+
+== SYNOPSIS:
+
+Poliqarpr is Ruby client for Poliqarp corpus server (see
+http://poliqarp.sourceforge.net/), which is used to store large texts used in
+Natural Language Processing.
+ 
+
+== REQUIREMENTS:
+
+Poliqarp server (only c++ implementation http://poliqarp.sourceforge.net/)
+
+== INSTALL:
+ 
+* sudo gem install poliqarpr
+
+You need RubyGems 1.2 and the github.com repository to be added to your sources list:
+
+* gem sources -a http://gems.github.com
+
+== LICENSE:
+ 
+(The MIT License)
+
+Copyright (c) 2008 Aleksander Pohl
+
+Permission is hereby granted, free of charge, to any person obtaining
+a copy of this software and associated documentation files (the
+'Software'), to deal in the Software without restriction, including
+without limitation the rights to use, copy, modify, merge, publish,
+distribute, sublicense, and/or sell copies of the Software, and to
+permit persons to whom the Software is furnished to do so, subject to
+the following conditions:
+
+The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+== FEEDBACK
+
+* mailto:apohllo@o2.pl
