@@ -1,4 +1,4 @@
-path = File.join(File.dirname(__FILE__), 'poliqarp')
+path = File.join(File.dirname(__FILE__), 'poliqarpr')
 require File.join(path, 'client')
 require File.join(path, 'query_result')
 require File.join(path, 'excerpt')
